k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdrf-validator-service
  namespace: sdrf-validator
  labels:
    app: sdrf-validator
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: sdrf-validator
